--- a/example-nodejs-client/package.json
+++ b/example-nodejs-client/package.json
@@ -2,9 +2,10 @@
   "name": "kafka-kv-example-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "mockserver.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/jest",
+    "start": "node ./"
   },
   "author": "",
   "license": "ISC",
