--- a/example-nodejs-client/package.json
+++ b/example-nodejs-client/package.json
@@ -14,6 +14,7 @@
     "jest": "24.1.0",
     "mockserver-node": "5.5.2",
     "morgan": "1.9.1",
+    "node-fetch": "2.3.0",
     "sinon": "7.2.3"
   }
 }
