--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -45,9 +45,23 @@ services:
     ports:
     - 18090:18090
 
+  topic1-create:
+    image: solsson/kafkacat@sha256:b91241b5741fccaef282eb8dbdfb6e5289bb8586274175b1836e57912ffecaef
+    command:
+    - -b
+    -  kafka:9092
+    # good enough with auto topic create
+    - -C
+    - -K
+    -  '='
+    - -t
+    -  topic1
+    - -e
+
   cache1:
     depends_on:
     - kafka
+    - topic1-create
     image: yolean/kafka-key-value-store
     build:
       context: ../
