Documents the dev setup

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -95,6 +95,7 @@ services:
 
   example-nodejs-client:
     depends_on:
+    - pixy
     - cache1
     build:
       context: ../example-nodejs-client
